PyMaker/datas/object2/RawHTML/i6001/Python_DOC_referPages.how-to-run-python-2-7-script-in-python-3-5-or-what-is-the-best-option-to-run-p.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/341184/can-i-install-python-3-x-and-2-x-on-the-same-windows-computer">Can I install Python 3.x and 2.x on the same Windows computer?</a>
<span class="question-originals-answer-count">
                    17 answers
                </span>
</li>
<li>
<a dir="ltr" href="/questions/32811713/is-it-ok-to-install-both-python-2-7-and-3-5">Is it ok to install both Python 2.7 and 3.5?</a>
<span class="question-originals-answer-count">
                    7 answers
                </span>
</li>
<li>
<a dir="ltr" href="/questions/3809314/how-to-install-both-python-2-x-and-python-3-x-in-windows-7">How to install both Python 2.x and Python 3.x in Windows 7</a>
<span class="question-originals-answer-count">
                    19 answers
                </span>
</li>
</ul>
</div>
<p>What is the most better way to use Python 2.7 code if I have installed Python 3 already?</p>
<p>I've never used a Python 2.7 because I am new in Python and most video tutorials and web topics said it's better to use Python 3.
But when I try to run code who is for 2.7 and not exist for Python 3, sometimes it's not working.
What is the better option. To use Python 2 and 3 both on my PC. Or to try looking for Python 3 code only. Or to modify somehow Python 2.7 code?
These are the errors:</p>
<pre><code>IPython 6.1.0 -- An enhanced Interactive Python.

runfile('C:/Users/G/Desktop/image_recognition/new_test/GemData.py', wdir='C:/Users/G/Desktop/image_recognition/new_test')

Traceback (most recent call last):

  File "C:\ProgramData\Anaconda3\lib\site-packages\IPython\core\interactiveshell.py", line 2862, in run_code
    exec(code_obj, self.user_global_ns, self.user_ns)

  File "&lt;ipython-input-1-02441e959cce&gt;", line 1, in &lt;module&gt;
    runfile('C:/Users/G/Desktop/image_recognition/new_test/GemData.py', wdir='C:/Users/G/Desktop/image_recognition/new_test')

  File "C:\ProgramData\Anaconda3\lib\site-packages\spyder\utils\site\sitecustomize.py", line 710, in runfile
    execfile(filename, namespace)

  File "C:\ProgramData\Anaconda3\lib\site-packages\spyder\utils\site\sitecustomize.py", line 101, in execfile
    exec(compile(f.read(), filename, 'exec'), namespace)

  File "C:/Users/G/Desktop/image_recognition/new_test/GemData.py", line 19
    print "error: image not read from file \n\n"        # print error message to std out
                                               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "error: image not read from file \n\n"        # print error message to std out)?
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You cannot run your present code with Python 3 interpreter, so you have two options: translate this code to Python 3 or run it with Python 2.</p>
<p><strong>Porting 2 to 3</strong></p>
<p>There is some materials about porting from python 2 to 3:</p>
<p><a href="https://docs.python.org/3/howto/pyporting.html" rel="nofollow noreferrer">Official docs</a></p>
<p><a href="https://www.digitalocean.com/community/tutorials/how-to-port-python-2-code-to-python-3" rel="nofollow noreferrer">DigitalOcean tutorial</a></p>
<p>Also there is a tool for automated translation: <a href="https://docs.python.org/2/library/2to3.html" rel="nofollow noreferrer">2to3</a>.
I haven't use it by myself so I cannot recommend it, but you can have a look and decide if it suites your needs.</p>
<p><strong>Running with python 2</strong></p>
<p>I think the best way here is to create a <a href="https://virtualenv.pypa.io/en/stable/" rel="nofollow noreferrer">virtual environment</a> with python 2. Something like this</p>
<pre><code>$ virtualenv -p python2 venv
$ source venv/bin/activate
$ python &lt;your-script&gt;.py
</code></pre>
<p>For the further reading, there are a techniques to write python 2/3 compatible code. <a href="http://python-future.org/compatible_idioms.html" rel="nofollow noreferrer">See this</a>.</p>
</div>
<span class="comment-copy">you can use virtualenvs to run differentpython versions on the same machine</span>
